--- a/MA_3.Rmd
+++ b/MA_3.Rmd
@@ -263,7 +263,7 @@ The shape of the curve is what we would expect in this setup. With a transaction
 ```{r excersise 3: Backtesting, echo=FALSE}
 #Prepare vectors that contain results
 N<-nrow(Sigma)
-months<-sort(unique(crsp_monthly_reduced$month))
+months<-sort(unique(crsp_monthly_reduced$month))   #Overflødig
 periods<-n_months-window_length #Number of periods
 NP_return<-rep(0,periods)
 HEA_return<-rep(0,periods)
@@ -390,6 +390,190 @@ We would not describe this as a "true" out of sample experiment. The used rollin
 
 
 
+```{r excersise 3: Sandbox, echo=FALSE}
+
+#window_length <- 120 
+periods<-n_months-window_length #Number of periods
+months<-sort(unique(crsp_monthly_reduced$month))
+stocks <- unique(crsp_monthly_reduced$permno)
+#periods <- nrow(industry_returns) - window_length 
+
+
+#beta <- 50
+#gamma <- 2
+
+performance_values <- matrix(NA, 
+                             nrow = periods, 
+                             ncol = 3) # A matrix to collect all returns
+colnames(performance_values) <- c("raw_return", "turnover", "net_return") 
+
+performance_values <- list("Mean_Var_(TC)" = performance_values, 
+                           "Naive" = performance_values, 
+                           "No_short_sale" = performance_values)
+
+w_prev_1 <- w_prev_2 <- w_prev_3 <- rep(1 /nrow(stocks_traded), nrow(stocks_traded))
+
+
+#######################################################################
+
+
+# Define function to adjust weights after returns have been realized
+adjust_weights <- function(w, next_return){
+  w_prev <- 1 + w * next_return
+  as.numeric(w_prev / sum(as.vector(w_prev)))
+}
+
+# Define function to evaluate performance before and after transaction cost
+evaluate_performance <- function(w, w_previous, next_return, lambda){
+  raw_return <- as.numeric(t(as.matrix(next_return)) %*% w)
+  turnover <- sum(abs(w - w_previous))
+  net_return <- raw_return - lambda * turnover
+  c(raw_return, turnover, net_return)
+}
+
+# Define function to determine no short sell optimal portfolio
+ No_short_sale_weight <- function(mu,
+                                          Sigma,
+                                          gamma = gamma_default){
+   N <- ncol(Sigma)
+   A <- diag(N)
+   out <- quadprog::solve.QP(Dmat = gamma * Sigma,
+                             dvec = mu,
+                             Amat = A,
+                             bvec = c(rep(0, N)),
+                             meq = 1)
+   return(as.numeric(out$solution))
+ }
+#######################################################################
+
+
+
+for(i in 1:periods){
+  
+  returns_window <- crsp_monthly_reduced %>% filter(month >= months[i]) %>% filter(month < months[i+window_length])
+  
+  
+  #returns_window <- industry_returns[i : (i + window_length - 1), ]
+  # next_return <- industry_returns[i + window_length, ] 
+  next_return <- (crsp_monthly_reduced %>% filter(month == months[i+window_length]) %>% select(ret_excess))$ret_excess
+  
+  # Computes sample mean excess return
+  mu_hat <- (returns_window %>%
+  group_by(permno) %>%
+  summarise(across(ret_excess, mean)))$ret_excess
+  
+  # Computes sample variance-covariance matrix
+  returns <- matrix(ncol = length(stocks), nrow = window_length)
+  colnames(returns) <- stocks
+  for(j in 1:length(stocks)){
+    returns[,j] <- (returns_window %>% filter(permno == stocks[j]))$ret_excess
+  }
+  Sigma_hat <- returns %>% cov() %>% as.matrix()
+  
+  # Sigma_hat <- cov(returns_window) 
+  # mu <- 0 * colMeans(returns_window) 
+  
+  # Transaction-cost adjusted portfolio
+  # w_1 <- compute_efficient_weight_L1_TC(mu = mu_hat, 
+  #                                       Sigma = Sigma_hat, 
+  #                                       lambda = lambda, 
+  #                                       gamma = gamma,
+  #                                       w_prev = w_prev_1)
+  
+  
+  # (w_prev, mu, Sigma, lambda, gamma = gamma_default)
+  
+  w_1 <-optimal_weights(w_prev_1, mu_hat, Sigma_hat, lambda, gamma_default)
+
+  performance_values[[1]][i, ] <- evaluate_performance(w_1, 
+                                                       w_prev_1, 
+                                                       next_return, 
+                                                       lambda = lambda)
+  
+  w_prev_1 <- adjust_weights(w_1, next_return)
+  
+  # Naive portfolio
+  w_2 <- rep(1 /nrow(stocks_traded), nrow(stocks_traded))
+  
+  performance_values[[2]][i, ] <- evaluate_performance(w_2, 
+                                                       w_prev_2, 
+                                                       next_return,
+                                                       lambda = lambda)
+  
+  w_prev_2 <- adjust_weights(w_2, next_return)
+  
+  # No short sale portfolio
+  w_3 <- No_short_sale_weight(mu_hat,Sigma_hat)
+  
+  performance_values[[3]][i, ] <- evaluate_performance(w_3, 
+                                                       w_prev_3, 
+                                                       next_return,
+                                                       lambda = lambda)
+  
+  w_prev_3 <- adjust_weights(w_3, next_return)
+}
+
+
+
+#######################################################################
+
+
+
+performance <- lapply(performance_values, as_tibble) %>% 
+  bind_rows(.id = "strategy")
+
+performance %>%
+  group_by(strategy) %>% summarise(across(c(raw_return,turnover,net_return), list(mean=mean,sd=sd)))
+
+
+
+
+
+
+# Generates an empty data frame, assigns columns for summary statistics and loads a vector with the variables we wish to summarise
+summary1 <- data.frame(matrix(ncol=3, nrow=3)) #There are 7 summary statistics and two variables
+colnames(summary1) <- c("mean", "sd", "min", "Q1","median", "Q3", "max")
+var_names<- c("raw_return","turnover","net_return")
+
+# Loops through all the chosen variables and calculates mean, sd, min, Q1, median, Q3 and max for each month then takes the average of those results.  
+for(i in 1:2){  
+summary1[i,] <- crsp_monthly %>%
+    group_by(month) %>%
+  summarise(across(var_names[i],
+                   list(mean = mean, 
+                        sd = sd, 
+                        min = min,
+                        q25 = ~quantile(., 0.25),
+                        median = median,
+                        q75 = ~quantile(., 0.75), 
+                        max = max),
+                   .names = "{.fn}  ")) %>%
+  summarise(across(-month, mean))
+}
+
+#Assigns relevant row names
+rownames(summary1) <- c("Excess return", "Market cap")
+
+# Rounding the excess return values to 4 for the output
+summary1[1,] <- round(summary1[1,], 4)
+
+# Rounding the market cap values (since they are so large that decimals have no real significance)
+summary1[2,c(1:2, 4:7)] <- round(summary1[2,c(1:2, 4:7)], 0)
+
+#Prints the summary nicely in a table
+summary1 %>% knitr::kable(booktabs = T, digits = 4, caption = "Summary statistics of the excess return and the market cap") %>% 
+  kable_paper("hover", full_width = T) %>% 
+  kable_styling(latex_options = "HOLD_position")
+
+
+
+
+
+
+  # summarize(Mean = 12 * mean(100 * net_return),
+  #           SD = sqrt(12) * sd(100 * net_return), 
+  #           `Sharpe ratio` = if_else(Mean > 0, Mean / SD, NA_real_),
+  #           Turnover = 100 * mean(turnover))
 
 
 
@@ -397,3 +581,5 @@ We would not describe this as a "true" out of sample experiment. The used rollin
 
 
 
+
+```
